next
[*] Add translation for messages.
[*] Fix deleting eav-attributes after delete models.

1.4
[+] English readme.
[*] Corrected english descriptions.
[*] getEavAttribute now returns null if attribute is not defined.
[*] Minor code impovements.

1.3
[-] Deleted method readEavAttributes
[+] Search model by eav-attribute set
[+] All queries in DB will generated by CDbCriteria
[*] Method saveEavAttributes changed to saveEavAttribute to allow to save each attribute
[*] Method getModelTableFk now returns value of primary key. To get FK name use getModelTableFkField

1.2
[-] AR for each eav-attribute

1.1
[+] Initial public release.